Changelog for ESAPI 1.4.x

Rev 359 - Ensure that the EncryptedProperties testStore() method runs before testLoad(), so that testLoad() has something to do AJV
Rev 358 - Ensure that encrypted cookies do not exceed roughly 4080 bytes in size (AJV)